--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "binance-api-node": "^0.7.6",
     "body-parser": "^1.18.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "http": "0.0.0",
+    "signalr-client": "0.0.17"
   }
 }
