--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "moment": "^2.22.0",
     "vue": "^2.5.2",
     "vue-json-excel": "^0.2.5",
